apps/storage/rook-ceph-cluster/templates/objectstore-s3-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rook-ceph-objectstore-s3-route
spec:
  hostnames: ['s3.mobrockers.com', '*.s3.mobrockers.com']
  parentRefs:
  - name: private
    namespace: envoy-gateway
  rules:
  - backendRefs:
    - name: rook-ceph-rgw-ceph-objectstore
      port: 80
    timeouts:
      request: 0s
      backendRequest: 0s
